# softfocus-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.docker/: docker-compose.yml
alembic/versions/: 98b931735456_loss_communication.py  ed1beefbcbd8_init.py
database/: schema.sql
src/: main.py  schema.py
src/analysts/: analysts_router.py  repository.py  schema.py  service.py
src/auth/: auth_router.py  schema.py  service.py
src/common/: bcrypt.py  jwt_decode.py  jwt_generator.py
src/loss_communication/: loss_communication_router.py  repository.py  schema.py  service.py
src/middlewares/: jwt_required.py
src/sqlalchemy/: database.py  models.py
